--- a/apex-zip/src/pages/zipdemo.page
+++ b/apex-zip/src/pages/zipdemo.page
@@ -23,28 +23,22 @@
  *  OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  *  OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  *  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-**/
--->
-<apex:component >
-	<apex:attribute name="oncomplete" type="string" description="Javascript executed once all files have been zipped"/>
-	<apex:attribute name="name" type="string" description="Name of the Javascript function generated to zip files"/>
-	<apex:includeScript value="{!URLFOR($Resource.jszip, '/jszip.js')}"/>
-	<apex:includeScript value="{!URLFOR($Resource.jszip, '/jszip-load.js')}"/>
-	<apex:includeScript value="{!URLFOR($Resource.jszip, '/jszip-deflate.js')}"/>
-	<apex:includeScript value="{!URLFOR($Resource.jszip, '/jszip-inflate.js')}"/>
+**/ 
+ -->
+<apex:page standardController="ZipFile__c" extensions="ZipDemoController" >
+	<apex:form id="form">
+		<apex:actionFunction name="receiveZip" action="{!receiveZipFile}" rerender="form">
+			<apex:param name="zipdata" assignTo="{!zipFileData}" value="0"/>
+		</apex:actionFunction>
+	</apex:form>		
+	<c:zipfile name="somezipfile" state="{!ZipFile__c.Id}" oncomplete="receiveZip(data);"
+		getzipfileentry="{!$RemoteAction.ZipDemoController.getZipFileEntry}">
+		<apex:repeat value="{!paths}" var="path">
+			<c:zipEntry path="{!path}"/>
+		</apex:repeat>
+	</c:zipfile>
 	<script>
-		// Create JSZip instance to receive files
-		// TODO: Need to scope these global var's by component name 
-		zipFile = new JSZip();
+		// Start zip file generation on page load
+		somezipfileGenerate();
 	</script>
-	<apex:componentBody /> <!--  Output children, typically <c:zipEntry> components -->
-	<script>
-		// Function to be called from the page to start the zip generation process
-		function {!Name}Generate()
-		{
-			// Execute given Javascript to handle completion of zip generation 
-			var data = zipFile.generate();
-			eval('{!oncomplete}');
-		}
-	</script>
-</apex:component>
+</apex:page>
