--- a/apex-zip/src/components/zipfile.component
+++ b/apex-zip/src/components/zipfile.component
@@ -34,12 +34,68 @@
 		<apex:componentBody /> <!--  Output children, typically <c:zipEntry> components -->
 	</c:zip>
 	<script>
+		// Component client side state 
+		// TODO: Need to scope these global var's by component name
+	    var zipFileNames = null;
+	    var zipFileEntry = null;
+	
+		// Method called by page to either make a request for the next zip entry file data or if none remain call oncomplete
 		function {!Name}Generate()
 		{
-			// Call 'getzipfileentry' JavaScript Remoting for each entry in turn
-			// ... 
-			// Call zip{!Name}Generate to finally generate, passing zip data via call to 'oncomplete' handler
-			// ...
+			// First call, list of zip file entries to request data for?
+			if(zipFileNames==null)
+			{
+				zipFileNames = [];
+			    for(var zipfileName in zipFile.files)
+			        zipFileNames.push(zipfileName);
+			}
+			// Find next zip file to request data for?  
+	        var file = null;
+	        var fileName = null;
+	        while(true)
+	        {
+	        	file = null;
+	        	fileName = zipFileNames.pop()
+            	if(fileName != null)
+            	{
+	            	file = zipFile.files[fileName];
+	            	if(file.options.dir)
+	            		continue;
+	            }
+	            break;
+	        }
+	        // File to request or all done?
+	        var more = file!=null ? true : false;
+	        if(more)
+	        {
+				// Call JavaScript Remoting to request file data for given file
+				zipFileEntry = file;
+				getZipFileEntry(fileName, '{!state}'); // TODO: Make state read/write				
+	        }
+	        else
+	        {
+				// Call generate 
+				zip{!name}Generate();
+	        }
+		}
+		
+		// Function makes remote call to server to request file data on success calls the generate function above to proceed to next file or complete
+		function getZipFileEntry(path, state) {
+		    Visualforce.remoting.Manager.invokeAction(
+		        '{!getzipfileentry}', 
+		        path, state,
+		        function(result, event){
+		            if (event.status) {
+		            	zipFileEntry.data = result;
+		                {!name}Generate();
+		            } else if (event.type === 'exception') {
+		            	alert(event.message);
+		            } else {
+		            	alert(event.message);
+		            }
+		        }, 
+		        {escape: true}
+		    );
 		}
 	</script>
 </apex:component>
