Fixed to handle binary files

--- a/apex-zip/src/components/unzip.component
+++ b/apex-zip/src/components/unzip.component
@@ -78,7 +78,7 @@
 			// File to send or done?
 			var more = file!=null ? true : false;
 			var path = more ? fileName : null;
-			var data = more ? file.data : null;
+			var data = more ? JSZipBase64.encode(file.data) : null;
 			var filename = zipFileName;
 			eval('{!oncomplete}');
 		}           
